'sstableloader' tool. You can upgrade the file format of your snapshots
using the provided 'sstableupgrade' tool.

3.0.19
======

Upgrading
---------
	- repair_session_max_tree_depth setting has been added to cassandra.yaml to allow operators to reduce
	  merkle tree size if repair is creating too much heap pressure. See CASSANDRA-14096 for details.

3.0.18
======

Upgrading
---------
    - The order of static columns in SELECT * has been fixed to match that of 2.0 and 2.1 - they are now sorted
      alphabetically again, by their name, just like regular columns are. If you use prepared statements and
      SELECT * queries, and have both simple and collection static columns in those tables, and are upgrading from an
      earlier 3.0 version, then you might be affected by this change. Please see CASSANDRA-14638 for details.

3.0.17
=====

Upgrading
---------
    - Materialized view users upgrading from 3.0.15 or later that have performed range movements (join, decommission, move, etc),
      should run repair on the base tables, and subsequently on the views to ensure data affected by CASSANDRA-14251 is correctly
      propagated to all replicas.
    - Changes to bloom_filter_fp_chance will no longer take effect on existing sstables when the node is restarted. Only
      compactions/upgradesstables regenerates bloom filters and Summaries sstable components. See CASSANDRA-11163

Deprecation
-----------
    - Background read repair has been deprecated. dclocal_read_repair_chance and
      read_repair_chance table options have been deprecated, and will be removed entirely in 4.0.
      See CASSANDRA-13910 for details.

3.0.16
=====

Upgrading
---------
   - See MAXIMUM TTL EXPIRATION DATE NOTICE above.
   - Cassandra is now relying on the JVM options to properly shutdown on OutOfMemoryError. By default it will
     rely on the OnOutOfMemoryError option as the ExitOnOutOfMemoryError and CrashOnOutOfMemoryError options